--- a/DSOC;23.ipynb
+++ b/DSOC;23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNthqC+I46H86pJ2de0T1xb",
+      "authorship_tag": "ABX9TyN3836BrVlFsGQqs7g+hjzr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "dGZOPVIh7hcK"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## **DevClub Summer of Code 2023**\n",
@@ -54,6 +45,13 @@
       ],
       "metadata": {
         "id": "hZbNxjUQemDr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "GSylXJtc8i4h"
       }
     },
     {
@@ -417,12 +415,12 @@
         "x_test=list(var1['Size'])\n",
         "x_test=np.array(x_test)\n",
         "y_test_actual=list(var1['Price'])\n",
-        "y_test=np.array(y_test)"
+        "y_test_actual=np.array(y_test_actual)"
       ],
       "metadata": {
         "id": "xGcbSXVowJeL"
       },
-      "execution_count": 112,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -491,26 +489,129 @@
       "source": [
         "Finally we have got our parameters for the model that is\n",
         "\n",
-        "Predicted Prices = Size Of land*Model.coef_[0] + model.intercept_"
+        "Predicted Prices = Size Of land*Model.coef_[0] + model.intercept_\n",
+        "\n",
+        "Now we go with the testing of our model with the testing data set and check how accurate it is and calculate the errors\n",
+        "\n"
       ],
       "metadata": {
         "id": "eUn-fH4u6oi2"
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Now we go with the testing of our model with the testing data set and check how accurate it is and calculate the erros"
+        "m = x_test.shape[0]\n",
+        "y_test_prediction=np.zeros(m)\n",
+        "absolute=0\n",
+        "square_Error=0\n",
+        "for i in range(m):\n",
+        "  y_test_prediction[i]=model.coef_[0]*x_test[i] + model.intercept_\n",
+        "  c=y_test_prediction[i]-y_test_actual[i]\n",
+        "  absolute=absolute+abs(x)\n",
+        "  square_Error=square_Error+c*c\n",
+        "  print(f\"{x_test[i]} sqft land prediction {y_test_prediction[i]:0.1f} Rupees\")"
       ],
       "metadata": {
-        "id": "I3NBeWUl65kz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8I6lKZrq63r0",
+        "outputId": "94b29f72-e18d-4721-8bbc-23b5e8a7e150"
+      },
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1888 sqft land prediction 328499.4 Rupees\n",
+            "1604 sqft land prediction 281494.3 Rupees\n",
+            "1962 sqft land prediction 340747.2 Rupees\n",
+            "3890 sqft land prediction 659852.1 Rupees\n",
+            "1100 sqft land prediction 198076.8 Rupees\n",
+            "1458 sqft land prediction 257329.7 Rupees\n",
+            "2526 sqft land prediction 434095.3 Rupees\n",
+            "2200 sqft land prediction 380138.8 Rupees\n",
+            "2637 sqft land prediction 452467.0 Rupees\n",
+            "1839 sqft land prediction 320389.4 Rupees\n",
+            "1000 sqft land prediction 181525.8 Rupees\n",
+            "2040 sqft land prediction 353657.0 Rupees\n",
+            "3137 sqft land prediction 535222.4 Rupees\n",
+            "1811 sqft land prediction 315755.1 Rupees\n",
+            "1437 sqft land prediction 253854.0 Rupees\n",
+            "1239 sqft land prediction 221082.9 Rupees\n",
+            "2132 sqft land prediction 368884.0 Rupees\n",
+            "4215 sqft land prediction 713643.1 Rupees\n",
+            "2162 sqft land prediction 373849.4 Rupees\n",
+            "1664 sqft land prediction 291425.0 Rupees\n",
+            "2238 sqft land prediction 386428.2 Rupees\n",
+            "2567 sqft land prediction 440881.2 Rupees\n",
+            "1200 sqft land prediction 214627.9 Rupees\n",
+            "852 sqft land prediction 157030.2 Rupees\n",
+            "1852 sqft land prediction 322541.0 Rupees\n",
+            "1203 sqft land prediction 215124.5 Rupees\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As you can see we have got the predicted prices of our land sizes by our Linear Regression Model, now lets find the erros in the predicted price and the actual price"
+      ],
+      "metadata": {
+        "id": "S0BbQ7P_-j67"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "import sklearn.metrics\n",
+        "mae=absolute/26 ## MAE -Mean Absolute Error\n",
+        "mse=square_Error/26\n",
+        "rmse=math.sqrt(mse)\n",
+        "print(\"The Mean absolute error is \",mae)\n",
+        "print(\"The Root mean squared error is \",rmse)\n",
+        "error=mae*100/mean_prices\n",
+        "print(\"The error percentage is \",error)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zUEzp_I9953C",
+        "outputId": "8bff2921-ca5d-44cc-f51b-41b67a9e5761"
+      },
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Mean absolute error is  24375.53700404869\n",
+            "The Root mean squared error is  81949.18469231478\n",
+            "The error percentage is  7.160584754550333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The error percentage is approximately 7.16% which is within the boundary limits and hence we can arrive in the conclusion that our ML model is working properly and hence the assignment of Week1 of the very well structured DevClub Summer of Code'23 ends here, hope you guys enjoyed reading my solution.\n",
+        "### **If you liked please star the fork :)**"
+      ],
+      "metadata": {
+        "id": "93aYeLj4EHak"
       }
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8I6lKZrq63r0"
+        "id": "AUZ2OB2oFK9i"
       },
       "execution_count": null,
       "outputs": []
